# idkwiad

./: Cargo.toml
src/: component.rs  engine.rs  lib.rs  main.rs  shapes.rs  texture.rs  vertex_type.rs
src/component/: camera.rs  input.rs  render.rs  transform.rs
src/shaders/: default.wgsl  line.wgsl
