[package]
name = "idkwiad"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "idkwiad"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.1", features = ["derive"]}
egui = "0.19.0"
egui-winit = "0.19.0"
egui_wgpu_backend = "0.20.0"
env_logger = "0.9.1"
hecs = "0.9.0"
log = "0.4.17"
nalgebra = "0.31.2"
nalgebra-glm = "0.17.0"
noise = "0.8.1"
pollster = "0.2.5"
rand = "0.8.5"
wgpu = "0.14.0"
winit = "0.27.4"

