[package]
name = "idkwiad"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "idkwiad"
path = "src/main.rs"

# [profile.release]
# strip = true
# opt-level = "s"
# lto = true
# codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"]}
egui = "0.22.0"
egui-winit = "0.22.0"
egui-wgpu = "0.22.0"
env_logger = "0.10.0"
hecs = "0.10.3"
log = "0.4.20"
nalgebra = "0.32.3"
nalgebra-glm = "0.18.0"
noise = "0.8.2"
pollster = "0.3.0"
rand = "0.8.5"
wgpu = "0.16.0"
winit = "0.28.6"

